# datasetx

./: README.md  pyproject.toml
datasetx/: __init__.py  afhq.py  celebahq.py  dreambench.py  dreambooth.py  dsine_normal_eval.py  hypersim.py  iharmony4.py  marigold_depth_eval.py  places365.py  raindrop.py  soundnet.py
docs/: ADE20K-SceneParse150.md  AFHQ.md  CIFAR-10.md  COCO.md  COCO2014.md  COCO2017.md  CelebA-HQ.md  CelebA.md  CelebAMask-HQ.md  DSINE-Normal-Eval.md  DreamBench.md  DreamBooth.md  FFHQ.md  Hypersim.md  ImageNet-1K.md  MNIST.md  Marigold-Depth-Eval.md  Places365.md  Raindrop.md  SoundNet.md
image_datasets/: __init__.py  ade20k.py  ade20k_sceneparse150.py  afhq.py  celeba.py  celebahq.py  celebamask_hq.py  cifar10.py  coco2014_captions.py  danbooru2019_portraits.py  dsine_normal_eval.py  ffhq.py  hypersim.py  iharmony4.py  imagenet.py  marigold_depth_eval.py  mnist.py  places365.py  raindrop.py  svhn.py  utils.py
scripts/: celeba_crop_images.py  celebahq_map_filenames.py  celebamask_hq_generate_mask.py  danbooru_remove_black_edges.py  hypersim_filter_invalid.py
src/image_datasets/: afhq.py  celebahq.py  ffhq.py
tests/: test_ade20k_sceneparse150.py  test_afhq.py  test_celebahq.py  test_celebamask_hq.py  test_coco2014_captions.py  test_dreambench.py  test_dreambooth.py  test_dsine_normal_eval.py  test_ffhq.py  test_hypersim.py  test_imagenet.py  test_marigold_depth_eval.py  test_raindrop.py  test_soundnet.py
